--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -10,7 +10,8 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Metrics embed
+        uses: lowlighter/metrics@v3.18
         with:
           # Your GitHub token
           # The following scopes are required:
