--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,38 +13,36 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org  (for organization related metrics)
+          #  - read:user (for user related data)
+          #  - repo      (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: Pain77
           template: classic
-          base: header, activity, repositories, metadata
-          config_timezone: Asia/Kolkata
-          plugin_achievements: yes
-          plugin_achievements_display: compact
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
-          plugin_activity_visibility: all
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year  
-          plugin_lines: yes
-          plugin_notable: yes
-          plugin_repositories: yes
-          plugin_stars: yes
-          plugin_stars_limit: 4
+          base: header, activity, community, repositories, metadata
+          config_timezone: Asia/Calcutta
           plugin_anilist: yes
-          plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites, watching, reading, characters
-          plugin_anilist_limit: 4
+          plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 22
-          plugin_skyline: yes
-          plugin_skyline_year: 2022         
-          plugin_skyline_frames: 60         
-          plugin_skyline_quality: 0.5   
-          plugin_skyline_compatibility: yes
-    
+          plugin_anilist_medias: anime, manga
+          plugin_anilist_sections: favorites
+          plugin_anilist_shuffle: yes
+          plugin_anilist_user: .user.login
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_support: yes
