--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,14 +27,12 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Kolkata
           plugin_anilist: yes
-          plugin_anilist_limit: 2
-          plugin_anilist_limit_characters: 22
           plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites
-          plugin_anilist_shuffle: yes
-          plugin_anilist_user: .user.login
+          plugin_anilist_sections: favorites, watching, reading, characters
+          plugin_anilist_limit: 4
+          plugin_anilist_limit_characters: 22
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_isocalendar_duration: full-year
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
