--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,6 +26,10 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Kolkata
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
           plugin_anilist: yes
           plugin_anilist_user: PA1NS4M4
           plugin_anilist_medias: anime, manga
