--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,6 +15,7 @@ jobs:
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
+          #  - repo
           # The following additional scopes may be required:
           #  - read:org  (for organization related metrics)
           #  - read:user (for user related data)
@@ -31,11 +32,17 @@ jobs:
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_anilist: yes
-          plugin_anilist_user: PA1NS4M4
-          plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites, watching, reading, characters
           plugin_anilist_limit: 4
           plugin_anilist_limit_characters: 22
+          plugin_anilist_medias: anime, manga
+          plugin_anilist_sections: favorites, watching, reading, characters
+          plugin_anilist_shuffle: yes
+          plugin_anilist_user: PA1NS4M4
+          plugin_discussions: yes
+          plugin_discussions_categories: yes
+          plugin_followup: yes
+          plugin_followup_sections: repositories
+          plugin_gists: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
@@ -48,3 +55,21 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_pagespeed: yes
+          plugin_pagespeed_detailed: yes
+          plugin_pagespeed_url: https://github.com/Pain77
+          plugin_skyline: yes
+          plugin_skyline_compatibility: yes
+          plugin_skyline_frames: 90
+          plugin_skyline_quality: 1.0
+          plugin_skyline_year: current-year
+          plugin_support: yes
+          plugin_traffic: yes
+          plugin_wakatime: yes
+          plugin_wakatime_days: 365
+          plugin_wakatime_limit: 5
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_url: https://wakatime.com
+          plugin_wakatime_user: current
